2011-05-20  Kulanthaivel Palanichamy  <kulanthaivel@codeaurora.org>

Reviewed by Simon Fraser.

        If both border-radius and box-shadow applied, shadow is not fully visible
        https://bugs.webkit.org/show_bug.cgi?id=59577

        * fast/css/box-shadow-and-border-radius.html: Added.
        * platform/qt/fast/css/box-shadow-and-border-radius-expected.png: Added.
        * platform/qt/fast/css/box-shadow-and-border-radius-expected.txt: Added.
        * platform/win/fast/css/box-shadow-and-border-radius-expected.png: Added.
        * platform/win/fast/css/box-shadow-and-border-radius-expected.txt: Added.
2011-05-20  Kulanthaivel Palanichamy  <kulanthaivel@codeaurora.org>

        Reviewed by Simon Fraser.

        If both border-radius and box-shadow applied, shadow is not fully visible
        https://bugs.webkit.org/show_bug.cgi?id=59577

        The current implementation of RoundedIntRect::inflateWithRadii() inflates
        its rect size and corner radii out of sync. This leads to validation failure in
        Path::addRoundedRect() and results in ignoring radii in the path.
        When this invalid path is used to clip out the rounded corner box before painting
        the box shadow, the entire rectangle is clipped out without the corner radii.

        This patch implements RoundedIntRect::inflateWithRadii() properly to inflate
        rounded rect radii based on inflate ratios of rect size.

        Test: fast/css/box-shadow-and-border-radius.html

        * platform/graphics/RoundedIntRect.cpp:
        (WebCore::RoundedIntRect::inflateWithRadii):
        * platform/graphics/RoundedIntRect.h:

Canonical link: https://commits.webkit.org/76605@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87006 268f45cc-cd09-0410-ab3c-d52691b4dbfc